--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 *.suo
+/.vs
+**/bin
+**/obj
+*.lock.json
+*.user
