--- a/src/StarodubOleg.GPLEX/project.json
+++ b/src/StarodubOleg.GPLEX/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "0.1.0-alpha1-4",
+  "version": "0.1.0-alpha1-5",
   "description": "Tools based on Gardens Point LEX version 1.2.2",
   "authors": [ "John Gough", "Starodub Oleg" ],
   "copyright": "Queensland University of Technology (QUT), John Gough, 2006-2014, Starodub Oleg, 2016",
@@ -20,12 +20,13 @@
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
-    }
+    },
+    "StarodubOleg.GPPG.Runtime": "0.1.0-alpha1-2"
   },
 
   "tools": {
-    "StarodubOleg.GPLEX": "0.1.0-alpha1-3",
-    "StarodubOleg.GPPG": "0.1.0-alpha1-2"
+    "StarodubOleg.GPLEX": "0.1.0-alpha1-4",
+    "StarodubOleg.GPPG": "0.1.0-alpha1-5"
   },
 
   "frameworks": {
